created different sections in index.html

--- a/index.html
+++ b/index.html
@@ -3,19 +3,45 @@
     <head>
         <meta charset="UTF-8" />
 
-        <title></title>
+        <title>Haley Telega Bio</title>
 
         <link>
 
     </head>
-        <header>
 
+    <body>
+    <!-- Header Section -->
+        <header>
+            <h1>Haley Telega</h1>
+        <!-- Navigation Section -->
+            <nav>
+                <ul>
+                    <li>About Me</li>
+                    <li>Work</li>
+                    <li>Contact Me</li>
+                    <li>Resume</li>
+                </ul>
+            </nav>
         </header>
 
+        <!-- Hero Section-->
+        <div>
+            <h2>Enter Cool Subtitle Eventually</h2>
+        </div>
+
+        <!-- About Me Section -->
+        <div>
+            <h2>About Me</h2>
+        </div>
+        <!-- My Work Section-->
+        <div>
+            <h2>My Work</h2>
+        </div>
+
+        <!-- Footer Section -->
         <footer>
-            
+            <h2>Contact Me</h2>
         </footer>
-    <body>
 
     </body>
 </html>
