--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <title>Haley Telega Bio</title>
 
-        <link>
+        <link rel="stylesheet" href="./css/style.css" />
 
     </head>
 
@@ -32,6 +32,7 @@
         <!-- About Me Section -->
         <div>
             <h2>About Me</h2>
+            <p>I have to write an about me paragraph.</p>
         </div>
         <!-- My Work Section-->
         <div>
