header updates in css

--- a/index.html
+++ b/index.html
@@ -16,31 +16,37 @@
         <!-- Navigation Section -->
             <nav>
                 <ul>
-                    <li>About Me</li>
-                    <li>Work</li>
-                    <li>Contact Me</li>
+                    <li>
+                        <a href="#AboutMe">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#MyWork">My Work</a>
+                    </li>
+                    <li>
+                        <a href="#ContactMe">Contact Me</a>
+                    </li>
                     <li>Resume</li>
                 </ul>
             </nav>
         </header>
 
         <!-- Hero Section-->
-        <div>
-            <h2>Enter Cool Subtitle Eventually</h2>
+        <section class="hero">
+            <p>Enter Cool Subtitle Eventually</p>
         </div>
 
         <!-- About Me Section -->
-        <div>
-            <h2>About Me</h2>
+        <section id="AboutMe">
+            <h2 class="aboutme">About Me</h2>
             <p>I have to write an about me paragraph.</p>
-        </div>
+        </section>
         <!-- My Work Section-->
-        <div>
+        <section id="MyWork">
             <h2>My Work</h2>
-        </div>
+        </section>
 
         <!-- Footer Section -->
-        <footer>
+        <footer id ="ContactMe">
             <h2>Contact Me</h2>
         </footer>
 
