html and css updates

--- a/index.html
+++ b/index.html
@@ -25,28 +25,31 @@
                     <li>
                         <a href="#ContactMe">Contact Me</a>
                     </li>
-                    <li>Resume</li>
+                    <li>
+                        <a href="#">Resume</a>
+                    </li>
                 </ul>
             </nav>
         </header>
 
         <!-- Hero Section-->
         <section class="hero">
-            <p>Enter Cool Subtitle Eventually</p>
+            <p>Welcome to my super sweet bio page</p>
         </div>
+        </section>
 
         <!-- About Me Section -->
-        <section id="AboutMe">
-            <h2 class="aboutme">About Me</h2>
+        <section id="AboutMe" class="intro">
+            <h2>About Me</h2>
             <p>I have to write an about me paragraph.</p>
         </section>
         <!-- My Work Section-->
-        <section id="MyWork">
+        <section id="MyWork" class="work">
             <h2>My Work</h2>
         </section>
 
         <!-- Footer Section -->
-        <footer id ="ContactMe">
+        <footer id ="ContactMe" class="info">
             <h2>Contact Me</h2>
         </footer>
 
