added stuff to the footer

--- a/index.html
+++ b/index.html
@@ -49,8 +49,15 @@
         </section>
 
         <!-- Footer Section -->
-        <footer id ="ContactMe" class="info">
-            <h2>Contact Me</h2>
+        <footer id ="ContactMe">
+                <h2>Contact Me</h2>
+            <div class="info">
+                <address>
+                    P: 519-566-6589 <br />
+                    E: <a href="mailto:haleytelega@outlook.com">haleytelega@outlook.com</a> <br />
+                    W: <a href="https://github.com/haleytelega">GitHub</a>
+                </address>
+            </div>
         </footer>
 
     </body>
