--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 
         <!-- Hero Section-->
         <section class="hero">
-            <p>Welcome to my super sweet bio page</p>
-        </div>
+            <div class="hero-paragraph">
+                <p>Welcome to my super sweet bio page</p>
+            </div>
         </section>
 
         <!-- About Me Section -->
