added more to the hero section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Hero Section-->
         <section class="hero">
             <div class="hero-paragraph">
-                <p>Welcome to my super sweet bio page</p>
+                <p>Welcome to my portfolio.</p>
             </div>
         </section>
 
@@ -54,7 +54,7 @@
                 <h2>Contact Me</h2>
             <div class="info">
                 <address>
-                    P: 519-566-6589 <br />
+                    P: <a href="519-566-6589">519-566-6589</a> <br />
                     E: <a href="mailto:haleytelega@outlook.com">haleytelega@outlook.com</a> <br />
                     W: <a href="https://github.com/haleytelega">GitHub</a>
                 </address>
