fixed the header, footer and about me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
 
-        <title>Haley Telega Bio</title>
+        <title>Haley Telega's Portfolio</title>
 
         <link rel="stylesheet" href="./css/style.css" />
 
@@ -42,7 +42,11 @@
         <!-- About Me Section -->
         <section id="AboutMe" class="intro">
             <h2>About Me</h2>
-            <p>I have to write an about me paragraph.</p>
+            <div>
+                <p>I have to write an about me paragraph.</p>
+                <p> I ahve no idea what to write about right now</p>
+                <p> I don't enjoy talking about myself</p>
+            </div>
         </section>
         <!-- My Work Section-->
         <section id="MyWork" class="work">
