added project 1 url

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         </section>
         <!-- My Work Section-->
         <section id="MyWork" class="work">
-            <h2>My Work</h2>
+            <div>
+                <h2>My Work</h2>
+                <h3>Project 1 URL: <a href="https://ayvavalenti.github.io/super-cool-project/">Project 1</a></h3>
+            </div>
         </section>
 
         <!-- Footer Section -->
@@ -58,8 +61,8 @@
                 <h2>Contact Me</h2>
             <div class="info">
                 <address>
-                    P: <a href="519-566-6589">519-566-6589</a> <br />
-                    E: <a href="mailto:haleytelega@outlook.com">haleytelega@outlook.com</a> <br />
+                    P: <a href="519-566-6589">519-566-6589</a>
+                    E: <a href="mailto:haleytelega@outlook.com">haleytelega@outlook.com</a>
                     W: <a href="https://github.com/haleytelega">GitHub</a>
                 </address>
             </div>
