added project url 2

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="MyWork" class="work">
             <div>
                 <h2>My Work</h2>
-                <h3>Project 1 URL: <a href="https://ayvavalenti.github.io/super-cool-project/">Project 1</a></h3>
+                <h3>Project 1 URL: <a href="https://ayvavalenti.github.io/super-cool-project/"  target="_blank">Project 1</a></h3>
             </div>
         </section>
 
