--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <div>
                 <h2>My Work</h2>
                 <h3>Project 1 URL: <a href="https://ayvavalenti.github.io/super-cool-project/"  target="_blank">Project 1</a></h3>
+                <h3>Project 2 URL: <a href="https://book-and-beans.herokuapp.com/"  target="_blank">Project 2</a></h3>
+                <h3>Project 3 URL: <a href="https://pure-spire-62048.herokuapp.com/"  target="_blank">Project 3</a></h3>
             </div>
         </section>
 
